Add port scanner code from stream

--- a/port_scanner/Gemfile
+++ b/port_scanner/Gemfile
@@ -3,3 +3,6 @@ source "https://rubygems.org"
 git_source(:github) {|repo_name| "https://github.com/#{repo_name}" }
 
 gem 'rspec'
+
+gem 'concurrent-ruby', require: 'concurrent'
+gem 'concurrent-ruby-edge', require: 'concurrent-edge'
